--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.1.6",
+    "vite-plugin-pwa": "^1.1.0",
     "vite-plugin-vuetify": "^2.0.1"
   }
 }
